@@ -20,13 +20,19 @@
 #include <liblustre.h>
 #include <obd.h>
 #include <lustre_lib.h>
-#include <lustre/lustre_user.h>
+#include <lustre/liblustreapi.h>
 #include <obd_lov.h>
 
 #include <lnet/lnetctl.h>
 
 
 #define MAX_LOV_UUID_COUNT      1000
+union {
+        struct obd_uuid uuid;
+        char name[0];
+} lov;
+#define lov_uuid lov.uuid
+#define lov_name lov.name
 
 /* Returns bytes read on success and a negative value on failure.
  * If zero bytes are read it will be treated as failure as such
@@ -40,18 +46,18 @@ int read_proc_entry(char *proc_path, char *buf, int len)
 
         fd = open(proc_path, O_RDONLY);
         if (fd == -1) {
-                fprintf(stderr, "open('%s') failed: %s\n",
-                        proc_path, strerror(errno));
+                llapi_err(LLAPI_MSG_ERROR, "open('%s') failed: %s\n",
+                          proc_path);
                 return -2;
         }
 
         rc = read(fd, buf, len - 1);
         if (rc < 0) {
-                fprintf(stderr, "read('%s') failed: %s\n",
-                        proc_path, strerror(errno));
+                llapi_err(LLAPI_MSG_ERROR, "read('%s') failed: %s\n",proc_path);
                 rc = -3;
         } else if (rc == 0) {
-                fprintf(stderr, "read('%s') zero bytes\n", proc_path);
+                llapi_err(LLAPI_MSG_ERROR | LLAPI_MSG_NO_ERRNO,
+                          "read('%s') zero bytes\n", proc_path);
                 rc = -4;
         } else if (/* rc > 0 && */ buf[rc - 1] == '\n') {
                 buf[rc - 1] = '\0'; /* Remove trailing newline */
@@ -64,7 +70,7 @@ int read_proc_entry(char *proc_path, char *buf, int len)
 int compare(struct lov_user_md *lum_dir, struct lov_user_md *lum_file1,
             struct lov_user_md *lum_file2)
 {
-        int stripe_count = 0;
+        int stripe_count = 0, min_stripe_count = 0, def_stripe_count = 1;
         int stripe_size = 0;
         int stripe_offset = -1;
         int ost_count;
@@ -76,43 +82,62 @@ int compare(struct lov_user_md *lum_dir, struct lov_user_md *lum_file1,
 
         fp = popen("\\ls -d  /proc/fs/lustre/lov/*clilov* | head -1", "r");
         if (!fp) {
-                fprintf(stderr, "open(lustre/lov/*clilov*) failed: %s\n", 
-                        strerror(errno));
+                llapi_err(LLAPI_MSG_ERROR,
+                          "open(lustre/lov/*clilov*) failed: %s\n");
                 return 2;
         }
-        if (fscanf(fp, "%s", lov_path) < 1) { 
-                fprintf(stderr, "read(lustre/lov/*clilov*) failed: %s\n",
-                        strerror(errno));
+        if (fscanf(fp, "%s", lov_path) < 1) {
+                llapi_err(LLAPI_MSG_ERROR,
+                          "read(lustre/lov/*clilov*) failed: %s\n");
                 pclose(fp);
                 return 3;
         }
         pclose(fp);
 
-        if (lum_dir == NULL) {
-                snprintf(tmp_path, sizeof(tmp_path) - 1, "%s/stripecount",
-                         lov_path);
-                if (read_proc_entry(tmp_path, buf, sizeof(buf)) < 0)
-                        return 5;
-
-                stripe_count = (int)strtoul(buf, NULL, 10);;
-        } else {
-                stripe_count = (signed short)lum_dir->lmm_stripe_count;
-        }
-        if (stripe_count == 0)
-                stripe_count = 1;
+        snprintf(tmp_path, sizeof(tmp_path) - 1, "%s/stripecount",
+                 lov_path);
+        if (read_proc_entry(tmp_path, buf, sizeof(buf)) < 0)
+                return 5;
+        def_stripe_count = (short)atoi(buf);
 
         snprintf(tmp_path, sizeof(tmp_path) - 1, "%s/numobd", lov_path);
         if (read_proc_entry(tmp_path, buf, sizeof(buf)) < 0)
                 return 6;
-
         ost_count = atoi(buf);
-        stripe_count = stripe_count > 0 ? stripe_count : ost_count;
 
-        if (lum_file1->lmm_stripe_count != stripe_count) {
-                fprintf(stderr, "file1 stripe count %d != dir %d\n",
-                        lum_file1->lmm_stripe_count, stripe_count);
+        if (lum_dir == NULL) {
+                stripe_count = def_stripe_count;
+                min_stripe_count = -1;
+        } else {
+                stripe_count = (signed short)lum_dir->lmm_stripe_count;
+                printf("dir stripe %d, ", stripe_count);
+                min_stripe_count = 1;
+        }
+
+        printf("default stripe %d, ost count %d\n",
+               def_stripe_count, ost_count);
+
+        if (stripe_count == 0) {
+                min_stripe_count = -1;
+                stripe_count = 1;
+        }
+
+        stripe_count = (stripe_count > 0 && stripe_count <= ost_count) ?
+                                                stripe_count : ost_count;
+        min_stripe_count = min_stripe_count > 0 ? stripe_count :
+                                                ((stripe_count + 1) / 2);
+
+        if (lum_file1->lmm_stripe_count != stripe_count ||
+            lum_file1->lmm_stripe_count < min_stripe_count) {
+                llapi_err(LLAPI_MSG_ERROR, "file1 stripe count %d != dir %d\n",
+                          lum_file1->lmm_stripe_count, stripe_count);
                 return 7;
         }
+
+        if (lum_file1->lmm_stripe_count < stripe_count)
+                llapi_err(LLAPI_MSG_WARN, "warning: file1 used fewer stripes"
+                          " %d < dir %d (likely due to bug 4900)\n",
+                          lum_file1->lmm_stripe_count, stripe_count);
 
         if (lum_dir != NULL)
                 stripe_size = (int)lum_dir->lmm_stripe_size;
@@ -126,8 +151,8 @@ int compare(struct lov_user_md *lum_dir, struct lov_user_md *lum_file1,
         }
 
         if (lum_file1->lmm_stripe_size != stripe_size) {
-                fprintf(stderr, "file1 stripe size %d != dir %d\n",
-                        lum_file1->lmm_stripe_size, stripe_size);
+                llapi_err(LLAPI_MSG_ERROR, "file1 stripe size %d != dir %d\n",
+                          lum_file1->lmm_stripe_size, stripe_size);
                 return 8;
         }
 
@@ -137,10 +162,11 @@ int compare(struct lov_user_md *lum_dir, struct lov_user_md *lum_file1,
                 for (i = 0; i < stripe_count; i++)
                         if (lum_file1->lmm_objects[i].l_ost_idx !=
                             (stripe_offset + i) % ost_count) {
-                                fprintf(stderr, "warning: file1 non-sequential "
-                                        "stripe[%d] %d != %d\n", i,
-                                        lum_file1->lmm_objects[i].l_ost_idx,
-                                        (stripe_offset + i) % ost_count);
+                                llapi_err(LLAPI_MSG_WARN,
+                                          "warning: file1 non-sequential "
+                                          "stripe[%d] %d != %d\n", i,
+                                          lum_file1->lmm_objects[i].l_ost_idx,
+                                          (stripe_offset + i) % ost_count);
                         }
         } else if (lum_file2 != NULL) {
                 int next, idx, stripe = stripe_count - 1;
@@ -148,10 +174,10 @@ int compare(struct lov_user_md *lum_dir, struct lov_user_md *lum_file1,
                        ost_count;
                 idx = lum_file2->lmm_objects[0].l_ost_idx;
                 if (idx != next) {
-                        fprintf(stderr, "warning: non-sequential "
-                                "file1 stripe[%d] %d != file2 stripe[0] %d\n",
-                                stripe,
-                                lum_file1->lmm_objects[stripe].l_ost_idx, idx);
+                        llapi_err(LLAPI_MSG_WARN, "warning: non-sequential "
+                                  "file1 stripe[%d] %d != file2 stripe[0] %d\n",
+                                  stripe, lum_file1->lmm_objects[stripe].l_ost_idx,
+                                  idx);
                 }
         }
 
@@ -164,69 +190,81 @@ int main(int argc, char **argv)
         struct lov_user_md *lum_dir, *lum_file1 = NULL, *lum_file2 = NULL;
         int rc;
         int lum_size;
-        char *fname;
 
         if (argc < 3) {
-                fprintf(stderr, "Usage: %s <dirname> <filename1> [filename2]\n",
-                        argv[0]);
+                llapi_err(LLAPI_MSG_ERROR,
+                          "Usage: %s <dirname> <filename1> [filename2]\n",
+                          argv[0]);
                 return 1;
         }
 
         dir = opendir(argv[1]);
         if (dir == NULL) {
-                fprintf(stderr, "%s opendir failed: %s\n", argv[1], 
-                        strerror(errno));
-                return errno;
+                rc = errno;
+                llapi_err(LLAPI_MSG_ERROR,
+                          "error: %s opendir failed\n", argv[1]);
+                return rc;
         }
 
         lum_size = lov_mds_md_size(MAX_LOV_UUID_COUNT);
         if ((lum_dir = (struct lov_user_md *)malloc(lum_size)) == NULL) {
-                fprintf(stderr, "unable to allocate memory for ioctl's");
-                return errno;
+                rc = ENOMEM;
+                llapi_err(LLAPI_MSG_ERROR, "error: can't allocate %d bytes "
+                          "for dir EA", lum_size);
+                goto cleanup;
         }
 
-        rc = ioctl(dirfd(dir), LL_IOC_LOV_GETSTRIPE, lum_dir);
+        rc = llapi_file_get_stripe(argv[1], lum_dir);
         if (rc) {
                 if (errno == ENODATA) {
                         free(lum_dir);
                         lum_dir = NULL;
                 } else {
                         rc = errno;
+                        llapi_err(LLAPI_MSG_ERROR,
+                                  "error: can't get EA for %s\n", argv[1]);
                         goto cleanup;
                 }
         }
 
-        if ((lum_file1 = (struct lov_user_md *)malloc(lum_size)) == NULL) {
-                fprintf(stderr, "unable to allocate memory for ioctl's");
+        /* XXX should be llapi_lov_getname() */
+        rc = llapi_file_get_lov_uuid(argv[1], &lov_uuid);
+        if (rc) {
                 rc = errno;
+                llapi_err(LLAPI_MSG_ERROR, "error: can't get lov name for %s\n",
+                          argv[1]);
+                return rc;
+        }
+
+        if ((lum_file1 = (struct lov_user_md *)malloc(lum_size)) == NULL) {
+                rc = ENOMEM;
+                llapi_err(LLAPI_MSG_ERROR,
+                          "error: can't allocate %d bytes for EA\n", lum_size);
                 goto cleanup;
         }
 
-        fname = strrchr(argv[2], '/');
-        fname = (fname == NULL ? argv[2] : fname + 1);
-
-        strncpy((char *)lum_file1, fname, lum_size);
-        rc = ioctl(dirfd(dir), IOC_MDC_GETFILESTRIPE, lum_file1);
+        rc = llapi_file_get_stripe(argv[2], lum_file1);
         if (rc) {
                 rc = errno;
+                llapi_err(LLAPI_MSG_ERROR,
+                          "error: unable to get EA for %s\n", argv[2]);
                 goto cleanup;
         }
 
         if (argc == 4) {
                 lum_file2 = (struct lov_user_md *)malloc(lum_size);
                 if (lum_file2 == NULL) {
-                        fprintf(stderr,
-                                "unable to allocate memory for ioctl's");
-                        rc = errno;
+                        rc = ENOMEM;
+                        llapi_err(LLAPI_MSG_ERROR, "error: can't allocate %d "
+                                  "bytes for file2 EA\n", lum_size);
                         goto cleanup;
                 }
 
-                fname = strrchr(argv[3], '/');
-                fname = (fname == NULL ? argv[3] : fname + 1);
-                strncpy((char *)lum_file2, fname, lum_size);
-                rc = ioctl(dirfd(dir), IOC_MDC_GETFILESTRIPE, lum_file2);
+                rc = llapi_file_get_stripe(argv[3], lum_file2);
                 if (rc) {
                         rc = errno;
+                        llapi_err(LLAPI_MSG_ERROR,
+                                  "error: can't get EA for %s\n", argv[3]);
                         goto cleanup;
                 }
         }
@@ -234,6 +272,7 @@ int main(int argc, char **argv)
         rc = compare(lum_dir, lum_file1, lum_file2);
 
 cleanup:
+        closedir(dir);
         if (lum_dir != NULL)
                 free(lum_dir);
         if (lum_file1 != NULL)
