@@ -13,6 +13,11 @@ tbd  Sun Microsystems, Inc.
         removed cwd "./" (refer to Bugzilla 14399).
 
 Severity   : normal
+Bugzilla   : 12653
+Description: sanity test 65a fails if stripecount of -1 is set
+Details    : handle -1 striping on filesystem in ll_dirstripe_verify
+
+Severity   : normal
 Bugzilla   : 14742
 Frequency  : rare
 Description: ASSERTION(CheckWriteback(page,cmd)) failed
